--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
