--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon app",
-    "start": "concurrently \"npm run serve\" \"npm run serve --prefix ../client\""
+    "start:dev:server": "concurrently -r --kill-others-on-fail \"npm run serve\" \"npm run build --prefix client\"",
+    "start": "node app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
