--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.4",
@@ -14,7 +17,8 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "@vue/cli-service": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
