--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
+    "vue-cli-plugin-vuetify": "^2.0.3",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
