--- a/client/package.json
+++ b/client/package.json
@@ -5,31 +5,35 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-watch": "vue-cli-service build-watch"
+  },
+  "dependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-plugin-vuex": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "axios": "^0.19.0",
+    "babel-eslint": "^10.0.3",
+    "core-js": "^3.4.4",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "firebase": "^7.6.1",
+    "material-design-icons-iconfont": "^5.0.1",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.1.0",
+    "vuetify-loader": "^1.3.0"
+  },
+  "devDependencies": {
+    "vue-cli-plugin-build-watch": "^1.0.0"
   },
   "engines": {
     "node": "12.13.0"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.4.4",
-    "firebase": "^7.6.1",
-    "material-design-icons-iconfont": "^5.0.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vue-cli-plugin-vuetify": "^2.0.3",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.23.7",   
-    "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
   }
 }
