--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon app",
-    "start:dev:server": "concurrently \"npm run serve\" \"npm run build --prefix client\"",
+    "start:dev:server": "concurrently \"npm run serve\" \"npm run build-watch --prefix client\"",
     "start": "node app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
