--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-watch": "vue-cli-service build-watch"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -30,9 +29,7 @@
     "vuetify": "^2.1.0",
     "vuetify-loader": "^1.3.0"
   },
-  "devDependencies": {
-    "vue-cli-plugin-build-watch": "^1.0.0"
-  },
+  "devDependencies": {},
   "engines": {
     "node": "12.13.0"
   }
