--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "nodemon app",
     "start:dev:server": "concurrently \"npm run serve\" \"npm run build --prefix client\"",
     "start": "node app.js",
-    "heroku-postbuild": "set NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
