--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-watch": "vue-cli-service build-watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -29,7 +30,9 @@
     "vuetify": "^2.1.0",
     "vuetify-loader": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vue-cli-plugin-build-watch": "^1.0.0"
+  },
   "engines": {
     "node": "12.13.0"
   }
