--- a/client/package.json
+++ b/client/package.json
@@ -30,9 +30,7 @@
     "vuetify": "^2.1.0",
     "vuetify-loader": "^1.3.0"
   },
-  "devDependencies": {
-    "vue-cli-plugin-build-watch": "^1.0.0"
-  },
+  "devDependencies": {},
   "engines": {
     "node": "12.13.0"
   }
