--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,10 @@
   "devDependencies": {},
   "engines": {
     "node": "12.13.0"
+  },
+  "resolutions": {
+    "deeply": "^3.1.0",
+    "minimist": "^1.2.3",
+    "lodash": "^4.17.19"
   }
 }
